--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "@types/semver": "^7.3.6",
-    "builder-util-runtime": "workspace:*",
+    "builder-util-runtime": "8.7.9",
     "fs-extra": "^10.0.0",
     "js-yaml": "^4.1.0",
     "lazy-val": "^1.0.5",
